--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -21,7 +21,14 @@
         <div class="ui-widget user-search-wrapper">
           <input id="user-search" autocomplete="off">
           <div id="picked-users">
+            <% if defined? @assignment %>
+              <% @assignment.instructors.each do |u| %>
+                <span class="user" data-id="<%= u.id %>"><span class="name"><%= u.full_name %> (<%= u.username %>)</span><span class="remove-user"><span class="glyphicon glyphicon-remove"></span></span></span>
+              <% end %>
+            <% end %>
+          
           </div>
+        </div>
       </div>
 
       <div class="form-group">
