--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -1,5 +1,21 @@
 <div class="container-fluid assignment-page" data-assignment-id="<%= @assignment.id %>">
-  <h1><%= @assignment.course %> <%= @assignment.course_title %>, <%= @assignment.semester %></h1>
+  <h1><span class="name-text"><%= @assignment.course %> <%= @assignment.course_title %>, <%= @assignment.semester %></span>
+    <% if can_edit? %>
+      <span class="edit-toggle">
+      <%= link_to edit_assignment_group_assignment_path(@assignment.assignment_group, @assignment.id)  do  
+      %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Assignment">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+      </button
+      ><% end %>
+      <%= link_to assignment_group_assignment_path(@assignment.assignment_group, @assignment), method: :delete, data: {
+        confirm: "Are you sure you want to delete this page?"} do  
+      %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Assignment">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+      </button
+      ><% end %>
+    </span>
+    <% end %>
+  </h1>
 
   <%# link_to "See other versions of this assignment.",  assignment_group_path(@assignment.assignment_group) %>
 
