--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Editing assignment: #{@assignment.name}") %>
 <%= render template: 'assignments/_modify_form', 
-  locals: {action: assignment_path(@assignment.id), method: :PATCH} %>
+  locals: {action: assignment_group_assignment_path(@assignment.assignment_group, @assignment), method: :PATCH} %>
