--- a/app/views/assignments/_assignment_search_result.html.erb
+++ b/app/views/assignments/_assignment_search_result.html.erb
@@ -3,7 +3,7 @@
   <a href="<%= assignment_path(assignment.id) %>" 
     data-assignment-id="<%= assignment.id %>"><span class="name"><%= assignment.name %></span></a>
 
-  <span class="metadata"><span class="author"><%= assignment.author %></span> <span class="date">(<%= assignment.created_at.strftime('%B %Y') %>)</span></span>
+  <span class="metadata"><span class="instructor"><%= oxford_comma_list assignment.instructors.map{|i| i.last_name} %></span> <span class="date">(<%= assignment.created_at.strftime('%B %Y') %>)</span></span>
 
   <span class="summary"><%= assignment.summary %></span>
 
@@ -14,7 +14,7 @@
     <span class="learning_curve">Learning curve: <i><%= assignment.learning_curve == "" ? "unknown" : assignment.learning_curve %></i></span>
     &mdash;
 
-    <span class="years">Taught <%= assignment.assignment_results.size %> <%= 'time'.pluralize(assignment.assignment_results.size) %></span><br/>
+    <span class="years">Taught <%= assignment.assignment_group.assignments.size %> <%= 'time'.pluralize(assignment.assignment_group.assignments.size) %></span><br/>
     
     <span class="tags"><%= render(partial: "tags/tag_badge", 
     collection: sort_by(assignment.tags, :text), as: :tag) %></span>
