--- a/app/views/assignments/_assignment_index_item.html.erb
+++ b/app/views/assignments/_assignment_index_item.html.erb
@@ -1,29 +1,44 @@
+<% ## This produces connections that can be interacted with via 
+   ## javascript + AJAX. 
+%>
+<% 
+if((@vertical.class == Assignment && @vertical.has_related_assignment?(assignment)) or 
+   @vertical.class != Assignment && (@vertical.assignments.exists?(assignment.id)))
+  remove_classes = ""
+  add_classes = "hidden"
+  status = "added"  
+else
+  remove_classes = "hidden"
+  add_classes = ""
+  status = ""
+end
+%>
 
-<div class="assignment index-entry">
-  <a href="<%= assignment_path(assignment.id) %>" 
-  data-assignment-id="<%= assignment.id %>"><span class="name"><%= assignment.name %></span></a>
 
 
-  <span class="metadata">
+<% if @vertical != assignment %>
+<div data-assignment-id="<%= assignment.id %>" 
+    class="assignment index-entry <%= status %>">
+  <div class="connect-resource" 
+      data-url="<%= vertical_vertical_path(@vertical, assignment) %>">
+      
+    <button data-action="remove" 
+      class="btn btn-sm btn-default remove-connection <%= remove_classes %>"
+      >Remove</button>
+    <button data-action="add" 
+      class="btn btn-sm btn-default add-connection <%= add_classes %>"
+      >Add</button>
+  </div>
+
+  <span class="entry-data-wrapper">
+  <!--
+    <span class="name"><%= assignment.name %></span>
+    <span class="summary"><%= assignment.summary %></span>
+  -->
     <span class="course"><%= assignment.full_title %></span>
     (<span class="instructor"><%= oxford_comma_list assignment.instructors.map{|i| i.last_name} %></span>,
     <span class="date"><%= assignment.semester %></span>)
-  </span>
 
-
-  <span class="summary"><%= assignment.summary %></span>
-
-  <span class="metadata">
-    <span class="added-by">Added on <%= assignment.created_at.strftime('%B %d, %Y') %> by <%= assignment.creator.username %></span> 
-    &mdash;
-    <span class="learning_curve">Learning curve: <i><%= (assignment.learning_curve.nil? or assignment.learning_curve == "") ? "unknown" : assignment.learning_curve %></i></span>
-    <% if false %>
-    <span class="years">Taught <%= assignment.assignment_results.size %> <%= 'time'.pluralize(assignment.assignment_results.size) %></span><br/>
-    <% end %>
-    <% if assignment.tags.size > 0 %>
-    &mdash;
-    <span class="tags"><%= render(partial: "tags/tag_badge", 
-    collection: sort_by(assignment.tags, :text), as: :tag) %></span>
-    <% end %>
   </span>
 </div>
+<% end %>
