--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -15,7 +15,7 @@
   </h1>
   <div id="assignment-entries" class="entries">
     <%# render @assignments %>
-    <%= render(partial: "assignment_index_item", 
+    <%= render(partial: "assignment_item", 
     collection: @assignments, as: :assignment) %>
   </div>
 
