--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -96,7 +96,7 @@
 	</div>
   </div>
   <hr>
-  <h2 class="m-1">Used In</h2>
+  <h2 class="m-1">Resourses that use this software</h2>
   <div class="row">
     
 	<div class="col-sm-4">
