--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -99,7 +99,7 @@
   </div>
   
   <hr>
-  <h2 class="m-1">Used In</h2>
+  <h2 class="m-1">Resources that use this dataset</h2>
   <div class="row">
 	<div class="col-sm-4">
 	  <%= render(partial: "verticals_shared/related_vertical",
