--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -95,7 +95,7 @@
 	</div>
   </div>
   <hr>
-  <h2 class="m-1">Used In</h2>
+  <h2 class="m-1">Resources that use this example</h2>
   <div class="row">
 	<div class="col-sm-4">
 	<%= render(partial: "verticals_shared/related_vertical",
@@ -114,7 +114,7 @@
 	</div>
   </div>
   <hr>
-  <h2 class="m-1">Uses</h2>
+  <h2 class="m-1">Resources this example uses</h2>
   <div class="row">
 	<div class="col-sm-4">
 	        <%= render(partial: "verticals_shared/related_vertical",
