Remove the version from the header.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 
       <div id="logo" class="navbar-brand">
         <span class="h3"><%= link_to "Alice", root_path %></span>
-        <span class="version">v<%= VERSION_STRING %></span>
+        <!--<span class="version">v<%= VERSION_STRING %></span>-->
       </div>
     </div>
 
