Updated the way assignment groups are displayed in the index.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -236,3 +236,10 @@ ul.authors, ul.instructors {
 
 
 }
+
+.assignment_group.index-entry {
+  .assignments-list {
+    padding-left: 1em;
+    margin-bottom: .5em;
+  }
+}
