--- a/app/views/assignment_groups/_assignment_group.html.erb
+++ b/app/views/assignment_groups/_assignment_group.html.erb
@@ -3,7 +3,8 @@
   data-assignment_group-id="<%= assignment_group.id %>"><span class="name"><%= assignment_group.name %></span></a>
 
   <span class="metadata">
-    <span class="author"><%= assignment_group.authors.map{|a| a.full_name}.join(", ") %></span> 
+    <span class="author"><%= oxford_comma_list assignment_group.authors.map{|a| a.full_name} %></span> 
+    &mdash;
     <span class="added-by">Added on <%= assignment_group.created_at.strftime('%B %d, %Y') %> by <%= assignment_group.creator.username %></span> 
   </span>
 
@@ -11,7 +12,7 @@
 
 
   <% if assignment_group.assignments.size > 0 %>
-    Versions:
+    <span class="version-header">Versions:</span>
     <div class="assignments-list">
     <% assignment_group.assignments.each do |assignment| %>
       <div data-assignment-id="<%= assignment.id %> class="assignment-entry"> 
@@ -24,6 +25,15 @@
   <% end %>
 
   <span class="metadata">
+    <% 
+    fields_of_study = assignment_group.assignments.map{|a| a.field_of_study}.uniq 
+    if fields_of_study.nil? or fields_of_study.size == 0 
+      fields_of_study = ["Unknown"]
+    end
+    %>
+
+    <span class="fields-of-study"><%= "Field".pluralize(fields_of_study.size) %> of study: <%=  oxford_comma_list fields_of_study %></span><br/>
+
     <span class="tags"><%= render(partial: "tags/tag_badge", 
     collection: sort_by(assignment_group.tags, :text), as: :tag) %></span>
   </span>
