--- a/app/views/assignment_groups/_assignment_group_search_result.html.erb
+++ b/app/views/assignment_groups/_assignment_group_search_result.html.erb
@@ -1,18 +1,18 @@
 <div data-assignment_group-id="<%= assignment_group.id %>" class="assignment_group vertical-result-data index-entry">
-
   <a href="<%= assignment_group_path(assignment_group.id) %>" 
-    data-assignment_group-id="<%= assignment_group.id %>"><span class="name"><%= assignment_group.name %></span></a>
+  data-assignment_group-id="<%= assignment_group.id %>"><span class="name"><%= assignment_group.name %></span></a>
 
   <span class="metadata">
-    <span class="author"><%= assignment_group.authors.map{|a| a.full_name}.join(", ") %></span>
+    <span class="author"><%= oxford_comma_list assignment_group.authors.map{|a| a.full_name} %></span> 
+    &mdash;
     <span class="added-by">Added on <%= assignment_group.created_at.strftime('%B %d, %Y') %> by <%= assignment_group.creator.username %></span> 
-  
   </span>
 
   <span class="summary"><%= assignment_group.summary %></span>
 
+
   <% if assignment_group.assignments.size > 0 %>
-    Versions:
+    <span class="version-header">Versions:</span>
     <div class="assignments-list">
     <% assignment_group.assignments.each do |assignment| %>
       <div data-assignment-id="<%= assignment.id %> class="assignment-entry"> 
@@ -25,8 +25,16 @@
   <% end %>
 
   <span class="metadata">
+    <% 
+    fields_of_study = assignment_group.assignments.map{|a| a.field_of_study}.uniq 
+    if fields_of_study.nil? or fields_of_study.size == 0 
+      fields_of_study = ["Unknown"]
+    end
+    %>
+
+    <span class="fields-of-study"><%= "Field".pluralize(fields_of_study.size) %> of study: <%=  oxford_comma_list fields_of_study %></span><br/>
+
     <span class="tags"><%= render(partial: "tags/tag_badge", 
     collection: sort_by(assignment_group.tags, :text), as: :tag) %></span>
   </span>
-
 </div>
