Errors on new/edit assignment forms now fill form back in with original values.
Added some styling on field error listings.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -256,3 +256,13 @@ ul.authors, ul.instructors {
 .outcome_summary, .notes {
   white-space:  pre-wrap;
 }
+
+.field_with_errors {
+  display: inline-block;
+
+  color: $brand-danger;
+}
+
+#error_explanation li {
+  margin-left: 2em;
+}
