Errors on create/update analysis redirects back to form.
Also: fixed some issues with some errors in assignment/assignment group create
not reporting proper errors on the modication form.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -258,7 +258,7 @@ ul.authors, ul.instructors {
 }
 
 .field_with_errors {
-  display: inline-block;
+  display: inline;
 
   color: $brand-danger;
 }
