Updaing an assignment group while an assignment is selected redirects back to the assignment.
Fixed some update bugs in vertical controllers.

--- a/app/views/assignment_groups/_modify_form.html.erb
+++ b/app/views/assignment_groups/_modify_form.html.erb
@@ -12,6 +12,10 @@
           value: @vertical.id %>
       <% end %>
 
+      <% unless @assignment_id.nil? %>
+        <%= hidden_field_tag 'redirect_path', assignment_group_assignment_path(@assignment_group, @assignment_id) %>
+      <% end %>
+
       <div class="form-group">
         <%= f.label :assignment_name %><span class="required-input">*</span> 
         (max 200 characters)
