--- a/app/views/assignment_groups/show.html.erb
+++ b/app/views/assignment_groups/show.html.erb
@@ -19,11 +19,11 @@ Allows the following:
   </button>
 
   <span class="edit-toggle">
-    <%= link_to edit_assignment_group_path(@assignment_group.id)  do  
-    %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Assignment">
+    <a href="<%= edit_assignment_group_path(@assignment_group.id) %><%= "?assignment_id=#{@assignment.id}" unless @assignment.nil? %>"  
+    ><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Assignment">
       <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
     </button
-    ><% end %>
+    ></a>
     <%= link_to @assignment_group, method: :delete, data: {
       confirm: "Are you sure you want to delete this page?"} do  
     %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Assignment">
