Examples -> How-tos (just in the display text).
Fixed some search issues (short queries were being treated as conjunctions, not
disjunctions.

--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -111,7 +111,7 @@
 
   <div class="col-sm-4">
         <%= render(partial: "examples/related_examples",
-         locals: {title: "Examples", 
+         locals: {title: "How-tos", 
                vertical: @analysis, 
                editable: true,
                title_tag: :h3 }) %>
