--- a/app/views/examples/_related_examples.html.erb
+++ b/app/views/examples/_related_examples.html.erb
@@ -31,6 +31,6 @@ This is expecting the following local variables:
       collection: sort_by(vertical.examples, :title), 
       as: :example,
       locals: {print_header: true, vertical: vertical}) || 
-      "<span class=\"no-data\">There are currently no examples associated with this #{vertical_name}.</p>".html_safe %>
+      "<span class=\"no-data\">There are currently no how-tos associated with this #{vertical_name}.</p>".html_safe %>
   </ul>
 </div>
