--- a/app/views/examples/connect_index.html.erb
+++ b/app/views/examples/connect_index.html.erb
@@ -1,15 +1,15 @@
 <% provide(:title, "Connect examples") %>
 <div class="container resource-modification">
   
-  <h2>Add a New Example</h2>
+  <h2>Add a new how-to</h2>
   
   <a href="<%= new_vertical_example_path @vertical %>">
     <button class="btn btn-md btn-default">
-      <span>&#43;</span> New Example
+      <span>&#43;</span> New how-to
     </button>
   </a>
   
-  <h2>Add an Existing Example</h2>
+  <h2>Add an existing how-to</h2>
   
   <p>
   Choose examples to associated with 
