--- a/app/views/examples/index.html.erb
+++ b/app/views/examples/index.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, "Examples") %>
+<% provide(:title, "How-tos") %>
 <div class="container">
-  <h1>Examples
+  <h1>How-tos
 
   <% if can_edit? %>
     <%= link_to(new_example_path) do 
-      %><button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Example">
+      %><button class="btn btn-sm btn-link" data-toggle="tooltip" title="New How-to">
 		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 	  </button>
 	  <% end %>
