--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -72,7 +72,7 @@
           <li id="header-analyses-link"><%= link_to "Analyses", analyses_path %></li>      
           <li id="header-software-link"><%= link_to "Software", software_index_path %></li>      
           <li id="header-datasets-link"><%= link_to "Datasets", datasets_path %></li>      
-          <li id="header-examples-link"><%= link_to "Examples", examples_path %></li>      
+          <li id="header-examples-link"><%= link_to "How-tos", examples_path %></li>      
 
           <% unless defined? @is_search_page %>
             <li>
