--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -281,7 +281,7 @@
 
       <div class="col-sm-4">
         <%= render(partial: "examples/related_examples",
-          locals: {title: "Examples", 
+          locals: {title: "How-tos", 
                   vertical: @assignment, 
                   editable: true,
                   title_tag: :h3 }) %>
