--- a/app/views/examples/edit.html.erb
+++ b/app/views/examples/edit.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, "Editing example: #{@example.title}") %>
+<% provide(:title, "Editing how-to: #{@example.title}") %>
 <%= render template: 'examples/_modify_form', 
   locals: {action: example_path(@example.id), method: :PATCH} %>
