--- a/app/views/examples/new.html.erb
+++ b/app/views/examples/new.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, "New Example") %>
+<% provide(:title, "New How-to") %>
 <%= render template: 'examples/_modify_form', 
   locals: {action: :examples, method: :post} %>
