--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Example -- #{@example.title}") %>
+<% provide(:title, "How-to -- #{@example.title}") %>
 <div class="container resource-modification">
   <h1><span class="name"><%= @example.title %></span>
     <% if can_edit? %>
@@ -11,13 +11,13 @@
 
       <span class="edit-toggle">
         <%= link_to edit_example_path(@example)  do %>
-          <button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Example">
+          <button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit How-to">
 		    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		  </button>
         <% end %>
         <%= link_to @example, method: :delete, data: {
             confirm: "Are you sure you want to delete this page?"} do  
-          %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete Example">
+          %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete How-to">
 			  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
 			</button>
 		<% end %>
