--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -111,7 +111,7 @@
 	</div>
 	<div class="col-sm-4">
 	  <%= render(partial: "examples/related_examples",
-			locals: {title: "Examples", 
+			locals: {title: "How-tos", 
               vertical: @software, 
               editable: true,
               title_tag: :h3 }) %>
