--- a/app/views/verticals_shared/_related_vertical.html.erb
+++ b/app/views/verticals_shared/_related_vertical.html.erb
@@ -10,18 +10,22 @@ This is expecting the following local variables:
   data -- defaults to vertical_from.public_send(vertical_to_name)
   title_tag -- defaults to h2; this is the tag to use for the title.
 %>
-  <% if not defined?(editable) %>
-    <% editable = false %>
-  <% end %>
-  <% vertical_from_name = vertical_from.class.to_s.underscore %>
-  <% vertical_to_name = vertical_to.class.to_s.underscore %>
-  <% vertical_to_names = vertical_to_name.pluralize(2) %>
-  <% if not defined?(data) or data.nil? %>
-    <% data = vertical_from.public_send(vertical_to_names) %>
-  <% end %>
-  <% if not defined?(title_tag) %>
-    <% title_tag = :h3 %>
-  <% end %>
+<% 
+if not defined?(editable)
+  editable = false
+end
+
+vertical_from_name = vertical_to_name vertical_from
+vertical_to_name = vertical_to_name vertical_to
+vertical_to_names = vertical_to_name.pluralize(2)
+if not defined?(data) or data.nil?
+  data = vertical_from.public_send(vertical_to.class.to_s.underscore.pluralize(2))
+end
+if not defined?(title_tag)
+  title_tag = :h3
+end
+%>
+
 
   <div class="related related-<%= vertical_to_names %>">
     <<%=title_tag%>><%= title %>
