--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -108,7 +108,7 @@
 	</div>
 	<div class="col-sm-4">
 	      <%= render(partial: "examples/related_examples",
-			   locals: {title: "Examples", 
+			   locals: {title: "How-tos", 
                vertical: @dataset, 
                editable: true,
                title_tag: :h3 }) %>
