--- a/app/views/assignment_groups/_modify_form.html.erb
+++ b/app/views/assignment_groups/_modify_form.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
       <%= form_for(@assignment_group, url: action, method: method, 
-        html: {class: "vertical-form"}) do |f| %>
+        html: {multipart: true, class: "vertical-form"}) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       
       <% unless @vertical.nil? %>
@@ -21,6 +21,13 @@
         (max 200 characters)
         <%= f.text_field :name, class: "form-control", 
           placeholder: "e.g., Analyze your social network" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :thumbnail %>
+        <%= image_tag(@assignment_group.thumbnail.tiny.url) if @assignment_group.thumbnail? %>
+        <%= f.file_field :thumbnail %>
+        <%= f.hidden_field :thumbnail_cache %>
       </div>
 
       <div class="form-group">
