--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -10,9 +10,13 @@
 }
 
 .index-entry {
+  // width: 100%;
+  margin-right: 1em;
+  // height: 300px;
+
+
   display: block;  
   min-height: 3em;
-  width: 100%;
   margin-bottom: 1em;
   padding: 1em .5em 1em .5em;
   border: 1px solid gray;
@@ -237,12 +241,6 @@ ul.authors, ul.instructors {
 
 }
 
-.assignment_group.index-entry {
-  .assignments-list {
-    padding-left: 1em;
-    margin-bottom: .5em;
-  }
-}
 
 .ui-helper-hidden-accessible {
   display: none;
@@ -265,4 +263,45 @@ ul.authors, ul.instructors {
 
 #error_explanation li {
   margin-left: 2em;
+}
+
+
+.assignment_group.index-entry {
+  padding: 0;
+
+  .assignments-list {
+    padding-left: 1em;
+    margin-bottom: .5em;
+  }
+
+  .content-wrapper {
+    padding: 1em .5em 1em .5em;
+
+  }
+
+  .thumbnail-wrapper.index-view {
+    // width: 100%;
+    // height: 4em;
+    // margin: 0;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // right: 0;
+    height: 200px;
+    width: 100%;
+    // margin-bottom: .5em;
+    display: block;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .empty {
+      width: 100%;
+      height: 100%;
+      background-color: #e9f0f6;
+    }
+
+  }
 }
