--- a/app/views/assignment_groups/_assignment_group.html.erb
+++ b/app/views/assignment_groups/_assignment_group.html.erb
@@ -1,3 +1,71 @@
+<% 
+itemsPerRow = 3 
+%>
+
+<% if @i % itemsPerRow == 0 %>
+<div class="row">
+<% end %>
+
+<div class="assignment_group index-entry col-md-3">
+  <a href="<%= assignment_group_path(assignment_group.id) %>" 
+    data-assignment_group-id="<%= assignment_group.id %>"
+    ><%= render(partial: "verticals_shared/listing_thumbnail", 
+        locals: {vertical: assignment_group}) %></a>
+
+  <div class="content-wrapper">
+    <a href="<%= assignment_group_path(assignment_group.id) %>" 
+    data-assignment_group-id="<%= assignment_group.id %>"><span class="name"><%= assignment_group.name %></span></a>
+
+    <span class="metadata">
+      <span class="author"><%= oxford_comma_list assignment_group.authors.map{|a| a.full_name} %></span> 
+      &mdash;
+      <span class="added-by">Added on <%= assignment_group.created_at.strftime('%B %d, %Y') %> by <%= assignment_group.creator.username %></span> 
+    </span>
+
+    <span class="summary"><%= assignment_group.summary %></span>
+
+
+    <% if assignment_group.assignments.size > 0 %>
+      <span class="version-header">Versions:</span>
+      <div class="assignments-list">
+      <% assignment_group.assignments.each do |assignment| %>
+        <div data-assignment-id="<%= assignment.id %> class="assignment-entry"> 
+            <a href="<%=assignment_path(assignment) %>"><span class="assignment-course"><%= assignment.full_title %></span></a>
+            (<span class="instructor"><%= oxford_comma_list assignment.instructors.map{|i| i.last_name} %></span>,
+            <span class="date"><%= assignment.semester %></span>)
+        </div>
+      <% end %>
+      </div>
+    <% end %>
+
+    <span class="metadata">
+      <% 
+      fields_of_study = assignment_group.assignments.map{|a| a.field_of_study}.uniq 
+      if fields_of_study.nil? or fields_of_study.size == 0 
+        fields_of_study = ["Unknown"]
+      end
+      %>
+
+      <span class="fields-of-study"><%= "Field".pluralize(fields_of_study.size) %> of study: <%=  oxford_comma_list fields_of_study %></span><br/>
+
+      <span class="tags"><%= render(partial: "tags/tag_badge", 
+      collection: sort_by(assignment_group.tags, :text), as: :tag) %></span>
+    </span>
+  </div>
+</div>
+
+<% if @i % itemsPerRow == itemsPerRow-1 %>
+</div>
+<% end %>
+
+<% @i += 1 %>
+
+
+
+
+
+<% if false %>
+
 <div class="assignment_group index-entry">
   <a href="<%= assignment_group_path(assignment_group.id) %>" 
   data-assignment_group-id="<%= assignment_group.id %>"><span class="name"><%= assignment_group.name %></span></a>
@@ -40,7 +108,7 @@
 </div>
 
 
-
+<% end %>
 
 
 
