--- a/app/views/software/_modify_form.html.erb
+++ b/app/views/software/_modify_form.html.erb
@@ -20,6 +20,15 @@
           placeholder: "e.g., NodeXL" %>
       </div>
 
+
+      <%# Thumnail selection. %>
+      <div class="form-group">
+        <%= f.label :thumbnail %>
+        <%= image_tag(@software.thumbnail.tiny.url) if @software.thumbnail? %>
+        <%= f.file_field :thumbnail %>
+        <%= f.hidden_field :thumbnail_cache %>
+      </div>
+
       <div class="form-group">
         <%= f.label :summary %><span class="required-input">*</span><br/>
         This should be a short overview of the software.
