--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -275,21 +275,13 @@ ul.authors, ul.instructors {
   }
 
   .content-wrapper {
-    padding: 1em .5em 1em .5em;
+    padding: 0 .5em 1em .5em;
 
   }
 
   .thumbnail-wrapper.index-view {
-    // width: 100%;
-    // height: 4em;
-    // margin: 0;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // right: 0;
     height: 200px;
     width: 100%;
-    // margin-bottom: .5em;
     display: block;
 
     img {
@@ -319,6 +311,12 @@ ul.authors, ul.instructors {
 
   .thumbnail-wrapper.show-view {
     display: inline-block;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 1em;
+    img {
+      width: 300px;
+    }
 
     img {
       width: 400px;
@@ -331,13 +329,3 @@ ul.authors, ul.instructors {
   }
 }
 
-  .thumbnail-wrapper {
-    padding: 0;
-    margin: 0;
-    margin-bottom: 1em;
-    img {
-      width: 300px;
-    }
-    // height: 200px;
-    // overflow: hidden;
-  }
