--- a/app/views/assignment_groups/_assignment_group.html.erb
+++ b/app/views/assignment_groups/_assignment_group.html.erb
@@ -18,8 +18,6 @@ itemsPerRow = 3
 
     <span class="metadata">
       <span class="author"><%= oxford_comma_list assignment_group.authors.map{|a| a.full_name} %></span> 
-      &mdash;
-      <span class="added-by">Added on <%= assignment_group.created_at.strftime('%B %d, %Y') %> by <%= assignment_group.creator.username %></span> 
     </span>
 
     <span class="summary"><%= assignment_group.summary %></span>
@@ -30,9 +28,9 @@ itemsPerRow = 3
       <div class="assignments-list">
       <% assignment_group.assignments.each do |assignment| %>
         <div data-assignment-id="<%= assignment.id %> class="assignment-entry"> 
-            <a href="<%=assignment_path(assignment) %>"><span class="assignment-course"><%= assignment.full_title %></span></a>
+            <a href="<%=assignment_path(assignment) %>"><span class="assignment-course"><%= assignment.course %></span>
             (<span class="instructor"><%= oxford_comma_list assignment.instructors.map{|i| i.last_name} %></span>,
-            <span class="date"><%= assignment.semester %></span>)
+            <span class="date"><%= assignment.semester %></span>)</a>
         </div>
       <% end %>
       </div>
