--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -26,6 +26,92 @@
             title_tag: :span  }) %>
 
   <div class="row">
+    <div class="col-sm-8">
+      <div class="row">
+        <div class="col-sm-12">
+
+          <%# Notes %>
+          <div class="row">
+            <div class="col-sm-12 notes-wrapper">
+              <h2>Notes</h2>
+              <div class="notes"
+                  ><%= ((@assignment.notes.nil? or @assignment.notes.empty?) ? "<span class=\"no-data\">No notes yet.</span>" : sanitize_text(@assignment.notes)).html_safe %></div>
+            </div>
+          </div>
+
+          <%# Outcome summary %>
+          <div class="row">
+            <div class="col-sm-12 outcome_summary-wrapper">
+              <h2>Outcome summary</h2>
+              <div class="outcome_summary"
+                  ><%= ((@assignment.outcome_summary.nil? or @assignment.outcome_summary.empty?) ? "<span class=\"no-data\">No outcome summary yet.</span>" : sanitize_text(@assignment.outcome_summary)).html_safe %></div>
+            </div>
+          </div>
+
+        </div> <%# End col-sm-12 %>
+      </div> <%# End row %>
+    </div> <%# End col-sm-8 %>
+
+    <div class="col-sm-4">
+      <div class="row">
+        <div class="col-sm-12 metadata-wrapper">
+          <div class="row">
+          <table class="metadata">
+            <tr>
+              <% if @assignment.instructors.size <= 1 %>
+                <th>Instructor:</th> 
+                <td>
+                  <%# No instructor (not good!!) %>
+                  <% if @assignment.instructors.size == 0 %>
+                    <span class=\"no-data\">No instructor assigned.</span>
+
+                  <%# One instructdor. %>
+                  <% else %>
+                    <span class="instructor"><%= @assignment.instructors.first.full_name %></span>
+                  <% end %>
+                </td>
+            </tr><tr>
+
+              <%# Multiple instrucdtors. %>
+              <% else %>
+                <th>Instructors:</th>
+                <td>
+                  <%= oxford_comma_list(assignment.instructors.map{|i| "<span class=\"instructor\">#{sanitize_text i.full_name}</span>"}).html_safe %>
+                </td>
+              <% end %>
+
+              <th>Field of study: </th><td><span class="field_of_study"><%= @assignment.field_of_study || "<span class=\"no-data\">Not provided</span>".html_safe %></span></td>
+
+            </tr><tr>
+
+              <th>Learning curve:</th><td><span class="learning_curve"><%= @assignment.learning_curve || "<span class=\"no-data\">Not provided</span>".html_safe %></span></td>
+            </tr><tr>
+
+              <th>Hours of instruction: </th><td><span class="instruction_hours"><%= @assignment.instruction_hours || "<span class=\"no-data\">Not provided</span>".html_safe %></span></td>
+
+            </tr><tr>
+
+              <th>Assignment duration (weeks): </th>
+              <td><span class="project_length_weeks"><%= @assignment.project_length_weeks || "<span class=\"no-data\">Not provided</span>".html_safe %></span></td>
+            </tr><tr>
+              
+              <th>Students given assignment: </th>
+              <td><span class="students_given_assignment"><%= @assignment.students_given_assignment || "<span class=\"no-data\">Not provided</span>".html_safe %></span></td>
+
+            </tr>
+
+          </table>
+          </div >
+        </div> <%# End col-sm-12 %>
+      </div> <%# End row %>
+    </div> <%# End cols-sm-4 %>
+
+  </div> <%# End row %>
+
+
+
+<% if false %>
+  <div class="row">
     <div class="col-sm-12">
 
       <%# Notes %>
@@ -92,6 +178,7 @@
 
     </div>
   </div>
+<% end %>
 
 <% if false %>
     <div class="col-sm-3">
