--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -269,6 +269,8 @@ ul.authors, ul.instructors {
 .assignment_group.index-entry {
   padding: 0;
 
+  height: 600px;
+
   .assignments-list {
     padding-left: 1em;
     margin-bottom: .5em;
@@ -283,10 +285,10 @@ ul.authors, ul.instructors {
     height: 200px;
     width: 100%;
     display: block;
+    overflow: hidden;
 
     img {
       width: 100%;
-      height: 100%;
     }
 
     .empty {
@@ -314,9 +316,6 @@ ul.authors, ul.instructors {
     padding: 0;
     margin: 0;
     margin-bottom: 1em;
-    img {
-      width: 300px;
-    }
 
     img {
       width: 400px;
