--- a/app/views/assignment_groups/index.html.erb
+++ b/app/views/assignment_groups/index.html.erb
@@ -1,20 +1,26 @@
 <% provide(:title, "Assignments") %>
 <div class="container">
+  <div class="row">
 
-  <h1>Assignments
-
-  <% if can_edit? %>
-    <%= link_to(new_assignment_group_path) do 
-      %>
-	  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Assignment Group">
-		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-	  </button>
+    <h1>Assignments
+    <% if can_edit? %>
+      <%= link_to(new_assignment_group_path) do 
+        %>
+      <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Assignment Group">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+      </button>
+      <% end %>
     <% end %>
-  <% end %>
-  </h1>
-  <div id="assignment-group-entries" class="entries">
-    <% @i = 0 %>
-    <%= render @assignment_groups %>
-  </div>
+    </h1>
+    <div class="col-med-12">
+      <div id="assignment-group-entries" class="entries">
+        <% 
+        @i = 0 
+        @total = @assignment_groups.size
+        %>
+        <%= render @assignment_groups %>
+      </div>
+    </div>
 
+  </div>
 </div>
