--- a/app/views/verticals_shared/_listing_thumbnail.html.erb
+++ b/app/views/verticals_shared/_listing_thumbnail.html.erb
@@ -5,11 +5,11 @@ Expects at least:
   vertical -- Anything with a thubmnail field.
 %>
 
-<div class="thumbnail-wrapper index-view">
+<div class="thumbnail-wrapper index-view" 
   <% if vertical.thumbnail? %>
-    <%= image_tag(vertical.thumbnail.tile.url) %>
+    style="background-image: url('<%= vertical.thumbnail.tile.url %>')">
+    <%# image_tag(vertical.thumbnail.tile.url) %>
   <% else %>
-    <div class="empty"></div>
+    ><div class="empty"></div>
   <% end %>
-
 </div>
